--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,16 @@
     </properties>
 
     <dependencies>
+        <!-- JSTL goes additionally due Tomcat behaviour -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -41,6 +47,7 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
+
 
     </dependencies>
 
