--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     <dependencies>
         <!-- JSTL goes additionally due Tomcat behaviour -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
