--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,10 @@
     <session-config>
         <session-timeout>60</session-timeout>
     </session-config>
+    
+    <error-page>
+        <error-code>404</error-code>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/WEB-INF/view/static-pages/error.jsp</location>
+    </error-page>
 </web-app>
